--- a/assets/plugins/simplegallery/css/style.css
+++ b/assets/plugins/simplegallery/css/style.css
@@ -190,3 +190,6 @@ user-select: none;
 #sgRefreshTpls input[type="checkbox"] {
 	vertical-align: bottom;
 }
+#sgRefreshProgress span {
+	color:#000;
+}
