--- a/assets/plugins/simplegallery/js/tpl/editForm.handlebars
+++ b/assets/plugins/simplegallery/js/tpl/editForm.handlebars
@@ -15,7 +15,7 @@
                 </tr>
                 <tr>
                     <td class="rowTitle">{{sgLang.size}}</td>
-                    <td>{{data.sg_properties.width}}x{{data.sg_properties.height}}, {{data.sg_properties.size}}</td>
+                    <td>{{data.sg_properties.width}}x{{data.sg_properties.height}}, {{bytesToSize data.sg_properties.size}}</td>
                 </tr>
                 <tr>
                     <td class="rowTitle">{{sgLang.createdon}}</td><td>{{data.sg_createdon}}</td>
