--- a/assets/plugins/simplegallery/js/tpl/uploadForm.handlebars
+++ b/assets/plugins/simplegallery/js/tpl/uploadForm.handlebars
@@ -18,7 +18,7 @@
             {{#each files}}
                 <tr id="sgFilesListRow{{@index}}">
                     <td class="sgrow1">{{this.name}}</td>
-                    <td class="sgrow2">{{this.size}}</td>
+                    <td class="sgrow2">{{bytesToSize this.size}}</td>
                     <td class="sgrow3 progress"></td>
                 </tr>
             {{/each}}
