https://github.com/Pathologic/SimpleGallery/issues/51 https://github.com/Pathologic/SimpleGallery/issues/21

--- a/assets/plugins/simplegallery/css/style.css
+++ b/assets/plugins/simplegallery/css/style.css
@@ -180,7 +180,7 @@ user-select: none;
 #sgFilesList table tbody tr:nth-child(odd) {
 	background-color: #fff;
 }
-#sgRefreshTpls, #sgRefreshProgress {
+#sgRefreshTpls, #sgRefreshProgress, #sgMove > div {
 	padding:10px;
 }
 #sgRefreshTpls label {
