--- a/assets/plugins/simplegallery/js/tpl/editForm.handlebars
+++ b/assets/plugins/simplegallery/js/tpl/editForm.handlebars
@@ -25,7 +25,7 @@
     </div>
     <div class="sgRow">
         <div>
-            <form id="sgForm"><input type="hidden" name="sg_id" value="{{data.sg_id}}">
+            <form id="sgForm" class="sgForm"><input type="hidden" name="sg_id" value="{{data.sg_id}}">
                 <label>{{sgLang.title}}</label>
                 <input name="sg_title" maxlength="255" type="text" value="{{data.sg_title}}">
                 <label>{{sgLang.description}}</label>
