--- a/assets/plugins/simplegallery/simplegallery/js/tpl/editForm.handlebars
+++ b/assets/plugins/simplegallery/simplegallery/js/tpl/editForm.handlebars
@@ -1,6 +1,6 @@
 <div id="sgEdit">
     <div class="sgRow">
-        <div style="font-size:0;text-align:center;">
+        <div class="image" style="font-size:0;text-align:center;">
             <img src="{{modxSiteUrl}}{{data.sg_image}}">
         </div>
         <div>
@@ -30,26 +30,11 @@
                 <input name="sg_title" maxlength="255" type="text" value="{{data.sg_title}}">
                 <label>{{sgLang.description}}</label>
                 <textarea name="sg_description">{{data.sg_description}}</textarea>
-                <a href="javascript:" class="btn-rte">Редактировать</a>
                 <label>{{sgLang.add}}</label>
                 <input name="sg_add" type="text" value="{{data.sg_add}}">
                 <label>{{sgLang.show}}</label>
                 <input type="checkbox" name="sg_isactive" value="1"{{#ifCond data.sg_isactive "1"}} checked{{/ifCond}}>{{sgLang.yes}}
             </form>
-        </div>
-    </div>
-    <div style="clear:both;padding:10px;float:right;">
-        <div id="sgEditSave" class="btn btn-right">
-            <div class="btn-text">
-                <img src="{{modxTheme}}/images/icons/save.png">
-                {{sgLang.save}}
-            </div>
-        </div>
-        <div id="sgEditCancel" class="btn btn-right">
-            <div class="btn-text">
-                <img src="{{modxTheme}}/images/icons/stop.png">
-                {{sgLang.cancel}}
-            </div>
         </div>
     </div>
 </div>
